compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_binary_option_in_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 196
expression: "let x = <<<<1:1>>:bytes>> x"
---
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:19
  │
1 │ let x = <<<<1:1>>:bytes>> x
  │                   ^^^^^ This option is only allowed in BitArray patterns.

Hint: This option has no effect in BitArray values.
See: https://gleam.run/book/tour/bit-strings.html

